# tree-sitter-xit

./: Cargo.toml  README.md  example.zit  grammar.js  package.json  tree-sitter-zit.wasm  tree-sitter.json
.github/workflows/: ci.yml
bindings/node/: index.js
src/: grammar.json  node-types.json  parser.c
test/corpus/: checkbox_checked.txt  checkbox_empty.txt  checkbox_obsolete.txt  checkbox_ongoing.txt  checkbox_open.txt  checkbox_question.txt  comments.txt  context_tags.txt  due_date_full.txt  due_date_month.txt  due_date_quarter.txt  due_date_week.txt  due_date_year.txt  effort_estimation.txt  github.txt  github_commit.txt  github_short_hash.txt  headline_multiple.txt  headline_simple.txt  jira.txt  linear.txt  links.txt  metadata.txt  multiline_basic.txt  multiline_metadata.txt  multiline_priority.txt  priority_critical.txt  priority_high.txt  priority_low.txt  priority_numeric.txt  progress.txt  scheduled_dates.txt  subtask_relations.txt  tag_multiple.txt  tag_quoted.txt  tag_simple.txt  tag_value.txt  task_ids.txt  task_statuses.txt  time_days.txt  (+5 more)
