[package]
name = "tree-sitter-zit"
description = "zit grammar for the tree-sitter parsing library"
version = "1.0.0"
authors = ["Brian Faust <brian@cline.sh>"]
keywords = ["incremental", "parsing", "zit"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/faustbrian/tree-sitter-zit"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20"

[build-dependencies]
cc = "1.0"
